1)shifted vaiables in :root to global styles 2) fixed build freeze

--- a/app/_components/ui/ShinyButton/styles.module.css
+++ b/app/_components/ui/ShinyButton/styles.module.css
@@ -1,8 +1,4 @@
-:root {
-  --radial-gradient-background: 250, 250, 250;
-  --solid-color-background: 15, 15, 15;
-  --overlay-color: 255, 255, 255;
-}
+
 .radial-gradient {
   background: radial-gradient(
       circle at 50% 0%,
