--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 /* @tailwind variants; */
 
+:root {
+  --radial-gradient-background: 250, 250, 250;
+  --solid-color-background: 15, 15, 15;
+  --overlay-color: 255, 255, 255;
+}
 @layer components {
   @keyframes pink-background-slide {
     50% {
